--- a/governance.html
+++ b/governance.html
@@ -5,7 +5,7 @@
 <title>Hispanics in Wine & Spirits, Inc. – Nonprofit • 2025</title>
 <link rel="stylesheet" href="assets/styles.css"/><link rel="icon" href="images/logo.png">
 <meta name="data-ein" content="874771656"><meta name="data-name" content="Hispanics in Wine & Spirits, Inc.">
-<meta name="data-email" content="contact@hispanicsin.idixa.io.vn"><meta name="data-phone" content="+19494390960">
+<meta name="data-email" content="contact@hispanicsin.idora.io.vn"><meta name="data-phone" content="+19494390960">
 <meta name="data-address" content="244 FIFTH AVENUE SUITE L224,
 NEW YORK, NY 10001"><meta name="data-map" content="244+FIFTH+AVENUE+SUITE+L224,+NEW+YORK,+NY+10001">
   <meta name="description" content="Our nonprofit strengthens the community with programs focused on community services, education, and direct relief.">
@@ -51,7 +51,7 @@ NEW YORK, NY 10001</p>
   <section class="section">
     <div class="container cards">
       <article class="c4186d8ebc7"><h3>Policies</h3><ul><li>Conflicts of interest</li><li>Document retention & public disclosure</li><li>Financial controls</li></ul></article>
-      <article class="c4186d8ebc7"><h3>Contact</h3><p class="small"><a href="mailto:contact@hispanicsin.idixa.io.vn">contact@hispanicsin.idixa.io.vn</a> • <a href="tel:+19494390960">+19494390960</a></p></article>
+      <article class="c4186d8ebc7"><h3>Contact</h3><p class="small"><a href="mailto:contact@hispanicsin.idora.io.vn">contact@hispanicsin.idora.io.vn</a> • <a href="tel:+19494390960">+19494390960</a></p></article>
       <article class="c4186d8ebc7"><img src="images/programs.jpg" alt="Governance image"></article>
     </div>
   </section>
@@ -61,7 +61,7 @@ NEW YORK, NY 10001</p>
       <div><img src="images/logo.png" alt="" style="width:132px;margin-bottom:.5rem"><div class="small">© <span id="year"></span> Hispanics in Wine & Spirits, Inc.</div><div class="small">California Nonprofit Public Benefit • 501(c)(3) • EIN 874771656</div></div>
       <div><div class="small"><strong>Mission:</strong> We provide financial and social assistance to the homeless through the reclaiming and re-purposing of degraded land in America.</div></div>
       <div><div class="small"><strong>Address:</strong> 244 FIFTH AVENUE SUITE L224,
-NEW YORK, NY 10001<br><strong>Email:</strong> <a href="mailto:contact@hispanicsin.idixa.io.vn">contact@hispanicsin.idixa.io.vn</a><br><strong>Phone:</strong> <a href="tel:+19494390960">+19494390960</a></div></div>
+NEW YORK, NY 10001<br><strong>Email:</strong> <a href="mailto:contact@hispanicsin.idora.io.vn">contact@hispanicsin.idora.io.vn</a><br><strong>Phone:</strong> <a href="tel:+19494390960">+19494390960</a></div></div>
     </div>
   </footer>
 </main>
